Fixed button icon layout issue

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -501,6 +501,7 @@ footer {
 .btn {
 	i.icon-angle-right {
 		margin-right: -0.625rem;
+		display: inline-block;
 	}
 }
 
